--- a/HTML/div and nav/index.html
+++ b/HTML/div and nav/index.html
@@ -3,25 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Heading tags</title>
+    <title>div and nav</title>
+
+    <style>
+        body {
+            display: flex;
+            justify-content: space-around;
+            border: 1px solid;
+        }
+
+        nav {
+            border: 1px solid;
+            width: 30%;
+            display: flex;
+            justify-content: space-around;
+        }
+
+    </style>
 </head>
 <body>
-    <h1>Carlos</h1>
-    <h2>Carlos</h2>
-    <h3>Carlos</h3>
-    <h4>Carlos</h4>
-    <h5>Carlos</h5>
-    <!-- Header tags, also known as heading tags, are used to separate headings and subheadings on a webpage -->
-
-
     <div>
         Here are a div
     </div>
     <!-- The tag defines a division or a section in an HTML document. -->
-
+ 
 
     <nav>
-        Here are a nav tag
         <a href="#">HOME</a>
         <a href="#">PROFILE</a>
         <a href="#">HELP</a>
@@ -30,21 +37,5 @@
     provide navigation links, either within the current document or to other documents 
     and inside the nav tag we have "a" a link tag The <a> tag defines a hyperlink, which is used 
     to link from one page to another. -->
-
-    
-    <ul>
-        <li> 
-            here are a li tag inside a ul tag
-            a ul tag means unorded-list and li means list-item
-        </li>
-    </ul>
-
-    
-    <ol type="A">
-        <li>we also have a ol tag it means ordered-list</li>
-        the propety type provide to us can change the style of the list to numeric 1 to alfa A
-    </ol>
-
-
 </body>
 </html>
