por hoje foi isso

--- a/HTML/header and footer/index.html
+++ b/HTML/header and footer/index.html
@@ -42,6 +42,21 @@
         a:hover {
             color: white;
         }
+
+
+        .doggo1 {
+            width: 300px;
+        }
+
+        .doggo2 {
+            width: 300px;
+        }
+
+        footer {
+            background-color: black;
+            color: white;
+            padding: 10px;
+        }
     </style>
 
 
@@ -60,5 +75,24 @@
             </ol>
         </nav>
     </header>
+
+    <h2>There are 2 ways to put a image insade your webpage</h2>
+
+    <h3>Frist one</h3>
+    <p>When an image is within your project</p>
+    <img class="doggo1" src="doggo.jpg" alt="doggo1">
+    <p>but this image is too big and we have to resize it</p>
+
+
+    <h2>Another way is by link</h2>
+    <img class="doggo2" src="https://fenwickpets.com/cdn/shop/articles/marliese-streefland-2l0CWTpcChI-unsplash.jpg?v=1673025944" alt="doggo2">
+
+    <p>obs: JPGs are better for a quick loading website. PNGs are better for clearer images.</p>
+
+  
+
+    <footer>
+        A typically contains information about the author of the section, copyright data or links to related documents.
+    </footer>
 </body>
 </html>
