css final lessons

--- a/CSS/display/index.html
+++ b/CSS/display/index.html
@@ -33,7 +33,12 @@
 
      <h1>Display</h1>
 
-     <p class="item1">Mouse here</p>
-     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum iure suscipit id sed qui perspiciatis doloribus. Voluptatum doloremque provident eos?</p>
+     <!-- <p class="item1">Mouse here</p>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum iure suscipit id sed qui perspiciatis doloribus. Voluptatum doloremque provident eos?</p> -->
+
+
+     <div class="red"></div>
+     <div class="blue"></div>
+     <div class="black"></div>
 </body>
 </html>
