--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-
+<!-- 
     <!-- Header -->
     <header>
         <nav class="navigation">
@@ -44,21 +44,29 @@
     <section class="container_products">
         <h2>Conheça nossos produtos</h2>
         <div class="products">
-            <div class="item">
+            <div class="card">
                 <img src="./img/guitarras.jpeg" alt="guitarras">
-                <h3>Guitarras</h3>
+                <div class="card_contant">
+                    <h4>Guitarras</h4>
+                </div>  
             </div>
-            <div class="item">
-                <img src="./img//baixos.png" alt="baixos">
-                <h3>Baixos</h3>
+            <div class="card">
+                <img src="./img/baixos.png" alt="guitarras">
+                <div class="card_contant">
+                    <h4>Guitarras</h4>
+                </div>  
             </div>
-            <div class="item">
-                <img src="./img//baterias.webp" alt="baterias">
-                <h3>Baterias</h3>
+            <div class="card">
+                <img src="./img/baterias.webp" alt="guitarras">
+                <div class="card_contant">
+                    <h4>Guitarras</h4>
+                </div>  
             </div>
-            <div class="item">
-                <img src="./img//equipamentos de audio.jpg" alt="equipamentosDeAudio">
-                <h3>Equipamento de Audio</h3>
+            <div class="card">
+                <img src="./img/equipamentos de audio.jpg" alt="guitarras">
+                <div class="card_contant">
+                    <h4>Guitarras</h4>
+                </div>  
             </div>
         </div>
     </section>
@@ -75,29 +83,6 @@
     <!-- End of Section -->
 
 
-        <!-- Section Promotions -->
-        <section class="container_products">
-            <h2>Promoções inperdiveis</h2>
-            <div class="products">
-                <div class="item">
-                    <img src="./img/guitarras.jpeg" alt="guitarras">
-                    <h3>Guitarras</h3>
-                </div>
-                <div class="item">
-                    <img src="./img//baixos.png" alt="baixos">
-                    <h3>Baixos</h3>
-                </div>
-                <div class="item">
-                    <img src="./img//baterias.webp" alt="baterias">
-                    <h3>Baterias</h3>
-                </div>
-                <div class="item">
-                    <img src="./img//equipamentos de audio.jpg" alt="equipamentosDeAudio">
-                    <h3>Equipamento de Audio</h3>
-                </div>
-            </div>
-        </section>
-        <!-- End Promotions Section -->
 </body>
 
 </html>
