--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -51,21 +51,21 @@
                 </div>  
             </div>
             <div class="card">
-                <img src="./img/baixos.png" alt="guitarras">
+                <img src="./img/baixos.png" alt="baixos">
                 <div class="card_contant">
-                    <h4>Guitarras</h4>
+                    <h4>Baixos</h4>
                 </div>  
             </div>
             <div class="card">
-                <img src="./img/baterias.webp" alt="guitarras">
+                <img src="./img/baterias.webp" alt="baterias">
                 <div class="card_contant">
-                    <h4>Guitarras</h4>
+                    <h4>Baterias</h4>
                 </div>  
             </div>
             <div class="card">
-                <img src="./img/equipamentos de audio.jpg" alt="guitarras">
+                <img src="./img/equipamentos de audio.jpg" alt="equipamentos_audio">
                 <div class="card_contant">
-                    <h4>Guitarras</h4>
+                    <h4>Equipamento de Audio</h4>
                 </div>  
             </div>
         </div>
@@ -82,6 +82,42 @@
     </section>
     <!-- End of Section -->
 
+
+    <!-- Promotions section -->
+        <section class="promotion_section">
+            <h3>Nossos novos Produtos</h3>
+            <div class="container_promotion">
+                <div class="card">
+                    <img src="img/fender.webp" alt="">
+                    <h4>American Ultra Telecaster</h4>
+                    <div class="infos">
+                        <h5>R$ 19.783,49</h5>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="img/squier.webp" alt="">
+                    <h4> Squier Stratocaster Classic Vibe 70s LRL Natural</h4>
+                    <div class="infos">
+                        <h5>R$ 3.819,94</h5>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="img/Fender CD 60SCE.webp" alt="">
+                    <h4> Fender CD 60SCE Dreadnought WN Natural</h4>
+                    <div class="infos">
+                        <h5>R$ 1.929,67</h5>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="img/amplBass.webp" alt="">
+                    <h4> Amplificador para Contrabaixo Fender Rumble 100 V3</h4>
+                    <div class="infos">
+                        <h5>R$ 4.346,91</h5>
+                    </div>
+                </div>
+            </div>
+        </section>
+    <!-- End Promotion section -->
 
 </body>
 
