--- a/Mini_Projects/Projetos Basicos/Cafeteria/index.html
+++ b/Mini_Projects/Projetos Basicos/Cafeteria/index.html
@@ -33,15 +33,23 @@
     <section class="Products">
         <div class="item">
             <img src="cafeComChantile.jpg" alt="">
+            <h4>Café com Chantile</h4>
+            <h5>5,00 R$</h5>
         </div>
         <div class="item">
             <img src="cafeGelado.jpg" alt="">
+            <h4>Café Gelado</h4>
+            <h5>4,50 R$</h5>
         </div>
         <div class="item">
             <img src="cafexpresso.jpg" alt="">
+            <h4>Expresso</h4>
+            <h5>5,50 R$</h5>
         </div>
         <div class="item">
             <img src="cappucino.jpg" alt="">
+            <h4>cappucino</h4>
+            <h5>7,00 R$</h5>
         </div>
     </section>
     <!-- Products End -->
