adicionando algumas coisas a mais nos projetos

--- a/Mini_Projects/Projetos Basicos/Cafeteria/index.html
+++ b/Mini_Projects/Projetos Basicos/Cafeteria/index.html
@@ -19,7 +19,7 @@
                 <ul class="links-navegacao">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Products</a></li>
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">About us</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </div>
@@ -27,6 +27,11 @@
     </header>
     <!-- Header End -->
 
+    <section class="Tittle">
+        <div>
+            <h2>O Melhor Cafe você encontra aqui!!!</h2>
+        </div>
+    </section>
 
 
     <!-- Products Start -->
@@ -51,10 +56,70 @@
             <h4>cappucino</h4>
             <h5>7,00 R$</h5>
         </div>
+        <div class="item">
+            <img src="cafeComChantile.jpg" alt="">
+            <h4>Café com Chantile</h4>
+            <h5>5,00 R$</h5>
+        </div>
+        <div class="item">
+            <img src="cafeGelado.jpg" alt="">
+            <h4>Café Gelado</h4>
+            <h5>4,50 R$</h5>
+        </div>
+        <div class="item">
+            <img src="cafexpresso.jpg" alt="">
+            <h4>Expresso</h4>
+            <h5>5,50 R$</h5>
+        </div>
+        <div class="item">
+            <img src="cappucino.jpg" alt="">
+            <h4>cappucino</h4>
+            <h5>7,00 R$</h5>
+        </div>
     </section>
     <!-- Products End -->
 
+    <!-- Banner start -->
+    <section class="banner">
+        <div class="banner_container">
+            <img src="banner.png" alt="">
+        </div>
+    </Section>
+    <!-- Banner end -->
+
+    <section class="tittle_coments">
+        <div>
+            <h2>Comentários dos nossos clientes</h2>
+        </div>
+    </section>
 
 
+    <section class="Comentarios">
+        <section class="comentarios_container">
+            <div class="item">
+                <img src="pessoa1.jpeg" alt="">
+                <p>Café com Chantile Meu Favorito 😜❤</p>
+            </div>
+            <div class="item">
+                <img src="pessoa2.jpeg" alt="">
+                <p>Café Gelado é o melhoooor 😍😍❤</p>
+            </div>
+            <div class="item">
+                <img src="pessoa3.webp" alt="">
+                <p>Expresso ✌😎</p>
+            </div>
+            <div class="item">
+                <img src="pessoa4.webp" alt="">
+                <p>Não troco meu cappucino 😜❤</p>
+            </div>
+        </section>
+
+    </section>
+
+
+
+    <footer class="footer">
+        <h3>Desenvolvido por <cite><a href="#">Carlos Eduardo</a></cite></h3>
+    </footer>
 </body>
 </html>
