buscar por nome

--- a/Mini_Projects/Projetos_intermediario/SIte_de_Anime_com_API/index.html
+++ b/Mini_Projects/Projetos_intermediario/SIte_de_Anime_com_API/index.html
@@ -10,6 +10,9 @@
 <body>
     <header class="header">
         <div class="logo">AnimesInfo</div>
+        <div>
+            <input type="search" placeholder="Digite Aqui" name="" id="search">
+        </div>
     </header>
 
 
