--- a/Mini_Projects/estudandoAPI/projeto2/index.html
+++ b/Mini_Projects/estudandoAPI/projeto2/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="main.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="anime-container"></div>
