--- a/Mini_Projects/estudandoAPI/projeto3/index.html
+++ b/Mini_Projects/estudandoAPI/projeto3/index.html
@@ -5,53 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Waifu Pics</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f4f4f4;
-        }
-
-        .gallery {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            margin-top: 20px;
-        }
-
-
-        .gallery img {
-            margin: 10px;
-            max-width: 100%;
-            /* Ajusta a largura para o container em telas menores */
-            height: auto;
-            border-radius: 10px;
-            object-fit: cover;
-        }
-
-        /* Para telas maiores */
-        @media (min-width: 768px) {
-            .gallery img {
-                max-width: 200px;
-                max-height: 300px;
-            }
-        }
-
-
-        button {
-            padding: 10px 20px;
-            margin-top: 20px;
-            background-color: #007BFF;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
