--- a/axios/public/index.html
+++ b/axios/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,19 @@
     <link rel="stylesheet" href="style.css"> <!-- Se você tiver um CSS -->
     <script src="app.js" defer></script> <!-- Mantenha apenas o app.js -->
 </head>
+
 <body>
+    <header class="header">
+        <h2>Waifu wallpaper</h2>
+    </header>
     <div class="container">
-        <h1>Waifus image</h1>
+        <h1>Click the button an get your waifu image</h1>
         <button id="fetchImage">Buscar Imagem</button>
         <div id="imageContainer"></div> <!-- Container para a imagem -->
     </div>
+    <footer class="footer">
+        <h2>Dev by <cite> Carlos Eduardo </cite> </h2>
+    </footer>
 </body>
+
 </html>
