mais algumas alterações

--- a/axios/public/index.html
+++ b/axios/public/index.html
@@ -7,6 +7,9 @@
     <title>Waifu Image</title>
     <link rel="stylesheet" href="style.css"> <!-- Se você tiver um CSS -->
     <script src="app.js" defer></script> <!-- Mantenha apenas o app.js -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -20,6 +23,11 @@
     </div>
     <footer class="footer">
         <h2>Dev by <cite> Carlos Eduardo </cite> </h2>
+        <div class="social">
+            <a href="https://www.instagram.com/cad_uh/" target="_blank"><i class="fa-brands fa-instagram fa-2x"></i></a>
+            <a href="https://github.com/Carlosouzavalle" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a>
+            <a href="https://x.com/h1_edu" target="_blank"><i class="fa-brands fa-square-x-twitter fa-2x"></i></a>
+        </div>
     </footer>
 </body>
 
